force-app/main/default/objects/Transaccion__c/Transaccion__c.object-meta.xml
<CustomObject>
    <label>Transaccion</label>
    <nameField>
        <displayFormat>TR-{00000}</displayFormat>
        <label>Número de Transaccion</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transacciones</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>