force-app/main/default/objects/Transaccion__c/fields/Comercio_Afiliado__c.field-meta.xml
<CustomField>
    <fullName>Comercio_Afiliado__c</fullName>
    <label>Comercio Afiliado</label>
    <referenceTo>Comercio_Afiliado__c</referenceTo>
    <relationshipLabel>Transacciones</relationshipLabel>
    <relationshipName>Transacciones</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>