force-app/main/default/objects/Transaccion__c/fields/Descuento__c.field-meta.xml
<CustomField>
    <fullName>Descuento__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Descuento</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Comercio_Afiliado__c</field>
            <operation>equals</operation>
            <valueField>Descuento__c.Comercio_Afiliado__c</valueField>
        </filterItems>
        <filterItems>
            <field>Descuento__c.Activo__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Descuento__c</referenceTo>
    <relationshipLabel>Transacciones</relationshipLabel>
    <relationshipName>Transacciones</relationshipName>
    <type>Lookup</type>
</CustomField>