force-app/main/default/objects/Transaccion__c/fields/Descuento_porcentaje__c.field-meta.xml
<CustomField>
    <fullName>Descuento_porcentaje__c</fullName>
    <formula>Descuento__r.Porcentaje_descuento__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Descuento</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>