force-app/main/default/objects/Transaccion__c/fields/Dia_semana__c.field-meta.xml
<CustomField>
    <fullName>Dia_semana__c</fullName>
    <formula>CASE( MOD(  DATEVALUE(Fecha_hora_Transaccion__c) - DATE(1900, 1, 7), 7), 0, &quot;7-Domingo&quot;, 1, &quot;1-Lunes&quot;, 2, &quot;2-Martes&quot;, 3,
&quot;3-Miercoles&quot;, 4, &quot;4-Jueves&quot;, 5, &quot;5-Viernes&quot;, 6, &quot;6-Sábado&quot;,&quot;Error&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Día de la semana</label>
    <type>Text</type>
</CustomField>