force-app/main/default/objects/Transaccion__c/fields/Fecha_hora_Transaccion__c.field-meta.xml
<CustomField>
    <fullName>Fecha_hora_Transaccion__c</fullName>
    <label>Fecha y hora de la Transacción</label>
    <type>DateTime</type>
</CustomField>