force-app/main/default/objects/Transaccion__c/fields/Monto_del_Descuento__c.field-meta.xml
<CustomField>
    <fullName>Monto_del_Descuento__c</fullName>
    <formula>Monto__c  -  Monto_descuento__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monto del Descuento</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>