force-app/main/default/objects/Transaccion__c/fields/Monto_descuento__c.field-meta.xml
<CustomField>
    <fullName>Monto_descuento__c</fullName>
    <formula>Monto__c -  (Monto__c *  Descuento_porcentaje__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monto con descuento</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>