force-app/main/default/objects/Transaccion__c/fields/Usuario_Portal__c.field-meta.xml
<CustomField>
    <fullName>Usuario_Portal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Usuario de Portal</label>
    <referenceTo>Usuario_de_Portal__c</referenceTo>
    <relationshipLabel>Transacciones</relationshipLabel>
    <relationshipName>Transacciones</relationshipName>
    <type>Lookup</type>
</CustomField>