force-app/main/default/objects/Transaccion__c/validationRules/Monto_en_0.validationRule-meta.xml
<ValidationRule>
    <fullName>Monto_en_0</fullName>
    <active>true</active>
    <description>El monto no puede tener valor 0</description>
    <errorConditionFormula>Monto__c == 0</errorConditionFormula>
    <errorMessage>El monto de la transacción no puede ser 0.00</errorMessage>
</ValidationRule>